tests/miniJava/neg/005243_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] length ( ) { return 0 ; } }
